# pangloss3

./: .gitignore  generated_tests_fixed.py  pyproject.toml
docs/: models.md
experiments/: descriptions.py
pangloss_models/: __init__.py  exceptions.py  field_definitions.py  model_registry.py  utils.py
pangloss_models/initialise_models/: initialise_create_db_model.py  initialise_create_model.py  initialise_field_definitions.py  initialise_reference_models.py  initialise_update_model.py
pangloss_models/model_bases/: annotated_value.py  base_models.py  base_types.py  configs.py  conjunction.py  document.py  edge_model.py  embedded.py  entity.py  helpers.py  reified_relation.py  relation.py  semantic_space.py  trait.py
tests/: conftest.py  test_initialisation_mechanism.py
tests/test_model_setup/: conftest.py  test_create_db_model.py  test_create_model.py  test_descriptions.py  test_initialisation_mechanism.py  test_initialise_field_definitions.py  test_meta.py  test_model_manager.py  test_reference_model.py  test_update_model.py  test_utils.py
